# audio-flow

./: .gitignore  AGENTS.md  BUILD_SUCCESS.md  COMMIT_SUMMARY.md  COMPLETION_REPORT.md  DEPLOYMENT.md  GETTING_STARTED.md  GIT_LOCAL_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  audio_mixer_basic.rs  audio_mixer_cpal.rs  audio_mixer_guide.md  backup.sh  implementation_guide.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/audio/: device.rs  engine.rs  error.rs  mixer.rs  mod.rs
src-tauri/src/commands/: devices.rs  mod.rs  routing.rs
src-tauri/src/config/: mod.rs  storage.rs
src/components/: DeviceList.tsx  RoutePanel.tsx  VUMeter.tsx
src/styles/: global.css
tests/audio_engine/: Cargo.toml
tests/audio_engine/src/: main.rs
