[package]
name = "audio-flow"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.17"
crossbeam = "0.8"
parking_lot = "0.12"
tokio = { version = "1.35", features = ["sync", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
toml = "0.8"
